Use spring MockitoExtension