@@ -7,11 +7,11 @@ import com.etraveli.movierental.model.Movie;
 import com.etraveli.movierental.repository.MovieRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,6 +22,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class MovieServiceTest {
 
     @Mock
@@ -38,8 +39,6 @@ class MovieServiceTest {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-
         movie = new Movie();
         movie.setId(1L);
         movie.setMovieId("F001");
@@ -57,7 +56,7 @@ class MovieServiceTest {
 
     @Test
     void testGetAllMovies() {
-        when(movieRepository.findAll()).thenReturn(Arrays.asList(movie));
+        when(movieRepository.findAll()).thenReturn(List.of(movie));
         when(movieMapper.toMovieDTO(any(Movie.class))).thenReturn(movieDTO);
 
         List<MovieDTO> movieDTOs = movieService.getAllMovies();
